# Election-Filtering

./: README.md  pyproject.toml
data/calibration/: 2020_me_sen_kalman.json  2020_me_sen_party_id_crosstabs.json  2020_me_sen_turnout_weight_fit.json
data/ingestion/: 2026_normalized_polls.json  2026_poll_scrub_log.md  2026_seen_polls.json
data/models/: 2026_election_model.json
docs/: app.js  index.html  styles.css
docs/data/: forecasts.json  race-history.json
scripts/: calibrate_2020_maine_senate.py  export_public.py  fit_2020_maine_turnout_weights.py  rebuild_2026_model.py
src/election_modeling/: __init__.py  automation.py  cycles.py  elections.py  filters.py  ingestion.py  nominees.py  persistence.py  polls.py  public.py  races.py  states.py
tests/: test_2026_poll_feed.py  test_maine_calibration.py  test_race_model.py
