[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "election-modeling"
version = "0.1.0"
description = "Kalman-filter election modeling primitives for poll unbiasing and race forecasting."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/election_modeling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
